Création of the earthbeating -> waiting for css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="right">
             <div class="quotes"></div>
         </div>
+        <button type="submit" id="sender">Send</button>
     </div>
     <script src="./script.js"></script>
 </body>
