--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -17,7 +18,7 @@
       <div class="heartbeat"></div>
     </div>
     <div class="center">
-      <img src="./becode.png" alt="" id="logo">
+      <img src="./becode-resize.png" alt="" id="logo">
     </div>
     <div class="right">
       <div class="quotes"></div>
