--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <title>Document</title>
 </head>
 
@@ -24,6 +25,17 @@
       <div class="quotes"></div>
     </div>
   </div>
+
+
+  <!-- TEST changement du background ====================== -->
+  <!-- <script type="text/javascript">
+    let change = setInterval(changeBck, 3000);
+
+    function changeBck() {
+      $('.main').css("background-image", "url(./bxl-bck2.jpg)");
+    };
+  </script> -->
+
   <script src="./script.js"></script>
 </body>
 
